...
//        activityIndicatorView.startAnimating()
        
//        self.memberExists()
        
        if ((phoneNumber.text?.isEmpty)! && (password.text?.isEmpty)!) {
            FTIndicator.dismissProgress()
            let alert = UIAlertController(title: "LOGIN", message: "Please fill empty fields.", preferredStyle: .alert)
            
            let okAction = UIAlertAction(title: "OK", style: .default) { (action: UIAlertAction!) in
//                activityIndicatorView.stopAnimating()

            }
            
...
        let finalNumber = checkNumber(number: phoneNumber.text!, countryCode: phoneCode.text!)
        print("final: \(finalNumber)")
        
        firebaseHelper.lookup(phoneNumber: finalNumber) { (user, error) in
            if error != nil {
                //alert
                let alert = UIAlertController(title: "Sign up", message: error!.localizedDescription, preferredStyle: .alert)
                let okAction = UIAlertAction(title: "OK", style: .default) { (action: UIAlertAction!) in
                    alert.dismiss(animated: true, completion: nil)
                }
                alert.addAction(okAction)
                self.present(alert, animated: true, completion: nil)
            }else{
...
