...
                case .simpleWithImages:
                    let alert = UIAlertController(style: self.alertStyle)
                    alert.set(title: "Simple Alert", font: .systemFont(ofSize: 20), color: UIColor(hex: 0xFF2D55))
                    alert.set(message: "3 kinds of actions with images", font: .systemFont(ofSize: 14), color: UIColor(hex: 0xFF9500))
                    alert.addAction(image: #imageLiteral(resourceName: "clip"), title: "Attache File", color: UIColor(hex: 0xFF2DC6), style: .default)
                    alert.addAction(title: "Cancel", style: .cancel) //.cancel action will always be at the end
                    alert.addAction(image: #imageLiteral(resourceName: "login"), title: "Login", style: .destructive, isEnabled: false)
                    alert.show()
                    
                case .oneTextField:
                    let alert = UIAlertController(style: self.alertStyle, title: "TextField", message: "Secure Entry")
                    
                    let textField: TextField.Config = { textField in
...
                        textField.leftViewPadding = 16
                        textField.leftTextPadding = 12
                        textField.borderWidth = 1
                        textField.borderColor = UIColor.lightGray.withAlphaComponent(0.5)
                        textField.backgroundColor = nil
                        textField.textColor = .black
                        textField.placeholder = "Password"
                        textField.clearsOnBeginEditing = true
                        textField.autocapitalizationType = .none
                        textField.keyboardAppearance = .default
                        textField.keyboardType = .default
                        textField.isSecureTextEntry = true
                        textField.returnKeyType = .done
...
