...
        }
        return request
    }
    
}

//SIGN UP
struct signupApiRequest: ApiRequest {
    let parameter: SignupParameter
    
    var urlRequest: URLRequest {
        
        let url: URL! = URL(string: BASE_URL+"createMember")
...
