...
                                <constraint firstAttribute="width" constant="220" id="vXM-gi-ck9"/>
                            </constraints>
                            <fontDescription key="fontDescription" name="MTNBrighterSans-Bold" family="MTN Brighter Sans" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HM3-wy-xSJ">
                            <rect key="frame" x="60" y="161" width="261" height="35"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="35" id="6wH-7Q-W23"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits"/>
...
